# MemForge

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cli/: cli.cpp  cli.h
core/: mach_access.cpp  mach_access.h  pattern.cpp  pattern.h
examples/: example_scan.cpp
include/: memory.h  process.h
src/: main.cpp  memory.cpp  process.cpp  scanner.cpp  scanner.h  utils.cpp  utils.h
tests/: test_memory.cpp  test_scanner.cpp
